tests/paczka1/fuzzy1/32463580.err
Error in line 2: vUs8Lv S174 3,7
Error in line 4: A587 S174 27,7
Error in line 7: 8blmrblO A441 57,6
Error in line 20: eX4JGMlKr A441 33,9
Error in line 38: Lx57IVaC S174 37,6
